# zotero-local-rag

./: .gitignore  LICENSE  Makefile  Readme.md  ZOTERO_RAG_GUIDE.md  Zotero_Local_RAG_Setup.bat  Zotero_Local_RAG_Setup.command  env.sh  pyproject.toml  requirements.txt
scripts/: setup_wizard.py  test_chunk_context.py  test_search_items.py  test_search_optimization.py  test_unification.py  test_zotero_meta.py
src/: embedder.py  html_extract.py  index_from_zotero.py  manifest.py  note_extract.py  pdf_extract.py  rag_mcp_server.py  text_utils.py  zotero_source_localapi.py
src/zotero_local_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
